# maker-checker-agents

./: .gitignore  LICENSE  Makefile  PROCESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: policy.yaml
docs/decisions/: 0001-cross-vendor-agent-independence.md  0002-deterministic-config-driven-scope-gate.md  0003-fail-open-on-gate-error.md  0004-config-as-governance.md  0005-type-enforced-hitl.md  0006-inherited-scope-boundaries.md  0007-grounding-and-retrieved-source-provenance.md  0008-runnable-agent-layer.md  0009-deterministic-verdict-and-cap.md  0010-pipeline-orchestration.md  0011-cli-and-demo-cases.md  README.md  adr-lineage.md
src/maker_checker_agents/: __init__.py  __main__.py  agents.py  cases.py  cli.py  config.py  models.py  pipeline.py  scope_gate.py  verdict.py
tests/: test_agents.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py  test_scope_gate.py  test_verdict.py
