[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maker-checker-agents"
version = "0.1.0"
description = "Independent dual-agent verification for high-stakes AI classification."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "David Kavanagh" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real frontier-model calls. The offline demo runs without these.
live = [
    "langchain-google-genai>=1.0",
    "langchain-anthropic>=0.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maker_checker_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
