[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maker-checker-agents"
version = "0.1.0"
description = "Independent dual-agent verification for high-stakes AI classification."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "David Kavanagh" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.scripts]
mca = "maker_checker_agents.cli:main"

[project.optional-dependencies]
# Real frontier-model calls — required to run the Maker + Checker agents (your own keys; see 0008).
live = [
    "langchain-google-genai>=1.0",
    "langchain-anthropic>=0.1",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maker_checker_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

# The live adapters are optional extras, not installed in CI (lint/type/test runs
# on `.[dev]` only). The agent layer imports them lazily inside `_invoke`.
[[tool.mypy.overrides]]
module = ["langchain_anthropic.*", "langchain_google_genai.*", "langchain_core.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: makes real, paid cross-vendor API calls; skipped in CI (run with -m live)",
]
